[package]
name = "ntprocesses"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["windows", "reverse-engineering", "injection", "x64", "process"]
description = "Rust library that makes it easy to manipulate Windows' processes."
repository = "https://github.com/item-self/ntprocesses"
homepage = "https://github.com/item-self/ntprocesses"
documentation = "https://docs.rs/ntprocesses"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
log = "0.4.27"
thiserror = "2.0.12"
ntapi = "0.4.1"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
]

[dev-dependencies]
pretty_assertions = "1"
